Recovery OP-312 telemetry module (#876)
* Telemetry updates
added Telemetry popup + configuration
renamed SmsSender class to SmsDaemon

* resolved conflict

* OP-153 Fix lots quantities on multiple discharges

* sync + little changes

* - added headers

* added freegeoip remote service configuration + changed package name fro
data collector module

* corrections based on Alessandro's suggestions

* corrections based on Alessandro's suggestions

* restored old variable name (reason: in the future we will do a
refactoring)

* new db single connection config + ipinfo config

* fixed some bugs

- now telemetry is based on the following rules: if active = null =>
show telemetry popup, if active = true => start telemetry daemon, if
active = false => do nothing (we should add a menu item in order to
allow user to access to the popup?)
- if TELEMETRYENABLED is yes then start telemetry daemon always (with
SINGLEUSER equals to yes or no)

* implementation telemetry module completed

+ added also simulated message sending (when DEBUG=yes)

* added property to enable/disable telemetry module

* Added Telemetry menu item in the Settings menu

+ managed the case when telemetry module is disabled from
settings.properties (could be used for other OH modules): we will not
show the menu item in the Settings menu

* OP-149 Set default duration (30min) and date check on visits. (#877)

* Set default duration (30min) and date check on visits.

Also clean and improve code

* Fix for multiple visit save

* Fix as per comments review

* Fix therapy changes

and also refactor constants

* Fix spacing

* Fix edit therapy (not insert)

Fix also duration calculation

* Fix window position after re-pack

* Add remove visit button in worksheet

* Enable visits management for admitted patients

* Fixes by comments review

* Avoid automatic saving and have changes all buffered before save

* Fix visit automatic save in work

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -899,6 +899,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = SMS Manager
 angal.menu.btn.statistics                                                                              = Statistics
 angal.menu.btn.supplier                                                                                = Supplier
+angal.menu.btn.telemetry																			   = Telemetry
 angal.menu.btn.types                                                                                   = Types
 angal.menu.btn.users                                                                                   = Users & Groups
 angal.menu.btn.usersusers                                                                              = Users
@@ -951,6 +952,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
+angal.telemetry.title                                                                             	   = Help us improve Open Hospital
+angal.telemetry.about																				   = Collect anonymous usage data and send them to informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
+angal.telemetry.body																				   = Please choose what you want to share (and what not) with our organization:
+angal.telemetry.confirmation.dialog.message															   = Are you sure that you want to send these informations?
+angal.telemetry.button.label.confirm																   = Confirm
+angal.telemetry.button.label.ask.later																   = Ask me later 
+angal.telemetry.button.label.ask.never																   = Disable and never ask again 
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
@@ -1042,7 +1051,7 @@ angal.newbill.youcannotdeletepastpayments.msg                                   
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
 angal.opd.attendancedate.txt                                                                           = Admittance Date
-angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for next visit.
+angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Delete the following opd?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
 angal.opd.diagnosis.txt                                                                                = Diagnosis
@@ -1408,14 +1417,15 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = A
 angal.therapy.addvisit.btn                                                                             = Add Visit
 angal.therapy.addvisit.btn.key                                                                         = D
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = A therapy cannot be defined for a date that is past.
 angal.therapy.availablem                                                                               = AVAILABLE
-angal.therapy.changenotifysettingsfor                                                                  = Change notify settings
+angal.therapy.changenotifysettingsfor.fmt                                                              = Change notify settings {0}
 angal.therapy.checkavailability.btn                                                                    = Check Availability
 angal.therapy.checkavailability.btn.key                                                                = H
 angal.therapy.daydays                                                                                  = day/s
-angal.therapy.deletealltherapiesfor                                                                    = Delete all therapies for
-angal.therapy.deleteallvisitsfor                                                                       = Delete all visits for
-angal.therapy.doyouwanttosetanumernowfor                                                               = Do you want to set a telephone number for
+angal.therapy.deletealltherapiesfor.fmt                                                                = Delete all therapies for {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Delete all visits for {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Do you want to set a telephone number for {0}
 angal.therapy.edittherapy.btn                                                                          = Edit Therapy
 angal.therapy.edittherapy.btn.key                                                                      = E
 angal.therapy.edittherapyentryform.title                                                               = Edit Therapy Entry Form
@@ -1441,7 +1451,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Patient visits saved.
 angal.therapy.period                                                                                   = Period
 angal.therapy.pharmaceutical                                                                           = Pharmaceutical
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Please insert a quantity greater than 0
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Please insert a quantity greater than 0.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Please save changes first.
 angal.therapy.removetherapy.btn                                                                        = Remove Therapy
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remove Visit
@@ -1451,12 +1462,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Start
 angal.therapy.startsdashend                                                                            = Starts - Ends
-angal.therapy.telephonenumberfor                                                                       = Telephone number for
+angal.therapy.telephonenumberfor.fmt                                                                   = Telephone number for {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Therapies plan has not been saved.
 angal.therapy.therapiesplansaved                                                                       = Therapies plan saved
 angal.therapy.therapy                                                                                  = Therapy
 angal.therapy.therapy.title                                                                            = Therapy
-angal.therapy.therapyfor                                                                               = Therapy for
+angal.therapy.therapyfor.fmt                                                                           = Therapy for {0}
 angal.therapy.therapynotavailable.title                                                                = Therapy Not Available
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = There's no telephone number associated with this Patient
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = The Therapy has not been checked, continue?
@@ -1510,6 +1521,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prev.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = A visit cannot be scheduled for a date that is past.
 angal.visit.changepatient                                                                              = Change Patient
 angal.visit.durationinminutes                                                                          = Duration (Min)
 angal.visit.findpatient.btn                                                                            = Find Patient
@@ -1526,6 +1538,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Print this day's visits (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remove Visit
+angal.visit.removevisit.msg                                                                            = Remove the visit?
 angal.visit.selectaward                                                                                = Select a Ward
 angal.visit.service                                                                                    = Service
 angal.visit.today.btn                                                                                  = Today
