--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -897,6 +897,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = Gestor SMS
 angal.menu.btn.statistics                                                                              = Estad铆sticas
 angal.menu.btn.supplier                                                                                = Proveedor
+angal.menu.btn.telemetry																			   = Telemetria
 angal.menu.btn.types                                                                                   = Tipolog铆as
 angal.menu.btn.users                                                                                   = Usuarios
 angal.menu.btn.usersusers                                                                              = Usuarios
@@ -1403,14 +1404,15 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = N
 angal.therapy.addvisit.btn                                                                             = Nueva Visita
 angal.therapy.addvisit.btn.key                                                                         = U
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = No se puede definir una terapia para una fecha pasada.
 angal.therapy.availablem                                                                               = DISPONIBLE
-angal.therapy.changenotifysettingsfor                                                                  = Cambiar la organizaci贸n de notificaci贸n para
+angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiar la organizaci贸n de notificaci贸n para {0}
 angal.therapy.checkavailability.btn                                                                    = Verificar Disponibilidad
 angal.therapy.checkavailability.btn.key                                                                = V
 angal.therapy.daydays                                                                                  = d铆a/s
-angal.therapy.deletealltherapiesfor                                                                    = Eliminar todas las terapias para
-angal.therapy.deleteallvisitsfor                                                                       = Eliminar todas las visitas para
-angal.therapy.doyouwanttosetanumernowfor                                                               = Asignar un n煤mero telef贸nico para
+angal.therapy.deletealltherapiesfor.fmt                                                                = Eliminar todas las terapias para {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Eliminar todas las visitas para {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Asignar un n煤mero telef贸nico para {0}
 angal.therapy.edittherapy.btn                                                                          = Modificar Terapia
 angal.therapy.edittherapy.btn.key                                                                      = M
 angal.therapy.edittherapyentryform.title                                                               = Modificar Formulario de Entrada de Terapia
@@ -1436,7 +1438,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Visitas del paciente grabadas
 angal.therapy.period                                                                                   = Per铆odo
 angal.therapy.pharmaceutical                                                                           = Producto
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Digitar una cantidad mayor a cero
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Digitar una cantidad mayor a cero.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Primero, guarde los cambios.
 angal.therapy.removetherapy.btn                                                                        = Remover Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remover Visita
@@ -1446,12 +1449,20 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inicio
 angal.therapy.startsdashend                                                                            = Inicio _ Fin
-angal.therapy.telephonenumberfor                                                                       = N煤mero telef贸nico para
+angal.telemetry.title                                                                             	   = Ay鷇anos a mejorar Open Hospital
+angal.telemetry.about																				   = Recopile datos de uso an髇imos y env韊los a informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital es el primero de un conjunto de productos de software que Informatici Senza Frontiere ha desarrollado para apoyar la gesti髇 de la informaci髇 y las actividades de los hospitales y centros de salud de la manera m醩 sencilla posible, proporcionando herramientas para las operaciones administrativas del hospital. (como registrar pacientes, administrar an醠isis de laboratorio y existencias farmac閡ticas) y producir estad韘ticas e informes detallados.
+angal.telemetry.body																				   = Elija lo que desea compartir (y lo que no) con nuestra organizaci髇:
+angal.telemetry.button.label.confirm																   = Confirmar
+angal.telemetry.button.label.ask.later																   = Preg鷑tame Luego
+angal.telemetry.button.label.ask.never																   = Desactivar y no volver a preguntar
+angal.telemetry.confirmation.dialog.message															   = 縀st醩 seguro de que quieres enviar esta informaci髇?
+angal.therapy.telephonenumberfor.fmt                                                                   = N煤mero telef贸nico para {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = El Plan de terapias no se ha guardado.
 angal.therapy.therapiesplansaved                                                                       = Plan de terapias guadado
 angal.therapy.therapy                                                                                  = Terapia
 angal.therapy.therapy.title                                                                            = Terapia
-angal.therapy.therapyfor                                                                               = Terapia para
+angal.therapy.therapyfor.fmt                                                                           = Terapia para {0}
 angal.therapy.therapynotavailable.title                                                                = Terapia no disponible
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = No existe un n煤mero telef贸nico asociado a este paciente
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Terapia no a sido controlada, continuar?
@@ -1505,6 +1516,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Previo
 angal.visit.arrowprevious.btn.key                                                                      = V
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = No se puede programar una visita para una fecha pasada.
 angal.visit.changepatient                                                                              = Cambiar Paciente
 angal.visit.durationinminutes                                                                          = Duraci贸n (minutos)
 angal.visit.findpatient.btn                                                                            = Asociar Paciente
@@ -1521,6 +1533,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Imprimir las Visitas de este D铆a (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remover Visita
+angal.visit.removevisit.msg                                                                            = Eliminar la visita?
 angal.visit.selectaward                                                                                = Seleccionar un reparto
 angal.visit.service                                                                                    = Servicio
 angal.visit.today.btn                                                                                  = Hoy
