--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -899,6 +899,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = Gestore SMS
 angal.menu.btn.statistics                                                                              = Statistiche
 angal.menu.btn.supplier                                                                                = Fornitore
+angal.menu.btn.telemetry																			   = Télemetria
 angal.menu.btn.types                                                                                   = Tipologie
 angal.menu.btn.users                                                                                   = Utenti
 angal.menu.btn.usersusers                                                                              = Utenti
@@ -951,6 +952,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = Gestore SMS
 angal.menu.statistics                                                                                  = Statistiche
 angal.menu.supplier                                                                                    = Fornitore
+angal.telemetry.title                                                                             	   = Aiutaci a migliorare Open Hospital
+angal.telemetry.about																				   = Raccogli dati di utilizzo anonimi e inviali a informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital è il primo di una serie di prodotti software che Informatici Senza Frontiere ha sviluppato per supportare nel modo più semplice possibile la gestione delle informazioni e le attività di ospedali e centri sanitari, fornendo strumenti per le operazioni amministrative ospedaliere (come registrare i pazienti, gestire analisi di laboratorio e scorte farmaceutiche) e produrre statistiche e report dettagliati.
+angal.telemetry.body																				   = Scegli cosa vuoi condividere (e cosa no) con la nostra organizzazione:
+angal.telemetry.button.label.confirm																   = Confermare
+angal.telemetry.button.label.ask.later																   = Chiedimelo più tardi
+angal.telemetry.button.label.ask.never																   = Disabilitare e non chiedere mai più
+angal.telemetry.confirmation.dialog.message															   = Se sicuro di volere inviare le seguenti informazioni?
 angal.menu.types                                                                                       = Tipologie
 angal.menu.users                                                                                       = Utenti
 angal.menu.usersusers                                                                                  = Utenti
@@ -1405,14 +1414,15 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = N
 angal.therapy.addvisit.btn                                                                             = Nuova Visita
 angal.therapy.addvisit.btn.key                                                                         = V
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = Non Ã¨ possibile definire una terapia per una data passata.
 angal.therapy.availablem                                                                               = DISPONIBILE
-angal.therapy.changenotifysettingsfor                                                                  = Cambiare le impostazioni di notifica per
+angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiare le impostazioni di notifica per {0}
 angal.therapy.checkavailability.btn                                                                    = Verifica DisponibilitÃ 
 angal.therapy.checkavailability.btn.key                                                                = D
 angal.therapy.daydays                                                                                  = giorno/i
-angal.therapy.deletealltherapiesfor                                                                    = Elimina tutte le terapie per
-angal.therapy.deleteallvisitsfor                                                                       = Eliminare tutte le visite per
-angal.therapy.doyouwanttosetanumernowfor                                                               = Vuoi assegnare un numero telefonico per
+angal.therapy.deletealltherapiesfor.fmt                                                                = Elimina tutte le terapie per {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Eliminare tutte le visite per {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Vuoi assegnare un numero telefonico per {0}
 angal.therapy.edittherapy.btn                                                                          = Modifica Terapia
 angal.therapy.edittherapy.btn.key                                                                      = M
 angal.therapy.edittherapyentryform.title                                                               = Modifica Terapia
@@ -1438,7 +1448,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Visite Paziente salvate.
 angal.therapy.period                                                                                   = Periodo
 angal.therapy.pharmaceutical                                                                           = Prodotto
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Inserire una quantitÃ  maggiore di 0
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Inserire una quantitÃ  maggiore di 0.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Si prega di salvare prima le modifiche.
 angal.therapy.removetherapy.btn                                                                        = Rimuovi Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Rimuovi Visita
@@ -1448,12 +1459,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inizio
 angal.therapy.startsdashend                                                                            = Inizio - Fine
-angal.therapy.telephonenumberfor                                                                       = Numero telefonico per
+angal.therapy.telephonenumberfor.fmt                                                                   = Numero telefonico per {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Il piano Terapie non Ã¨ stato salvato.
 angal.therapy.therapiesplansaved                                                                       = Piano Terapie salvato.
 angal.therapy.therapy                                                                                  = Terapia
 angal.therapy.therapy.title                                                                            = Terapia
-angal.therapy.therapyfor                                                                               = Terapia per
+angal.therapy.therapyfor.fmt                                                                           = Terapia per {0}
 angal.therapy.therapynotavailable.title                                                                = Terapia non Disponibile
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = Non c'Ã¨ un numero telefonico associato a questo paziente
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Terapia non Ã¨ stata controllata, continuare?
@@ -1507,6 +1518,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prec.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = Non Ã¨ possibile programmare una visita per una data passata.
 angal.visit.changepatient                                                                              = Cambia Paziente
 angal.visit.durationinminutes                                                                          = Durata (min)
 angal.visit.findpatient.btn                                                                            = Trova Paziente
@@ -1523,6 +1535,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Stampa le Visite di Oggi (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Rimuovi Visita
+angal.visit.removevisit.msg                                                                            = Rimuovere la visita?
 angal.visit.selectaward                                                                                = Selezionare un reparto
 angal.visit.service                                                                                    = Prestazione
 angal.visit.today.btn                                                                                  = Oggi
