--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -273,6 +273,7 @@ angal.menu.btn.printing                                                     = Uc
 angal.menu.btn.smsmanager                                                   = Ujumbe wa Msimamizi
 angal.menu.btn.statistics                                                   = Takwimu
 angal.menu.btn.supplier                                                     = Muuzaji
+angal.menu.btn.telemetry													= Telemetry
 angal.menu.btn.types                                                        = Aina
 angal.menu.btn.users                                                        = Watumiaji
 angal.menu.btn.usersusers                                                   = Watumiaji
@@ -320,6 +321,7 @@ angal.menu.printing                                                         = Uc
 angal.menu.smsmanager                                                       = Ujumbe wa Msimamizi
 angal.menu.statistics                                                       = Takwimu
 angal.menu.supplier                                                         = Muuzaji
+angal.menu.telemetry														= Telemetry
 angal.menu.types                                                            = Aina
 angal.menu.users                                                            = Watumiaji
 angal.menu.usersusers                                                       = Watumiaji
@@ -472,11 +474,11 @@ angal.supplier.requiredfields                                               = * 
 angal.supplier.taxcode                                                      = Tax Namba ID
 angal.therapy.actions                                                       = Vitendo
 angal.therapy.availablem                                                    = INAPATIKANA
-angal.therapy.changenotifysettingsfor                                       = Badilisha mipangilio ya kutoa taarifa
+angal.therapy.changenotifysettingsfor.fmt                                   = Badilisha mipangilio ya kutoa taarifa {0}
 angal.therapy.daydays                                                       = Siku/ma
-angal.therapy.deletealltherapiesfor                                         = Futa matibabu yote kwa
-angal.therapy.deleteallvisitsfor                                            = Futa chunguzi zote kwa
-angal.therapy.doyouwanttosetanumernowfor                                    = Unataka kuweka namba ya simu kwa ajili ya
+angal.therapy.deletealltherapiesfor.fmt                                     = Futa matibabu yote kwa {0}
+angal.therapy.deleteallvisitsfor.fmt                                        = Futa chunguzi zote kwa {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                = Unataka kuweka namba ya simu kwa ajili ya {0}
 angal.therapy.end                                                           = Mwisho
 angal.therapy.every                                                         = Wote
 angal.therapy.followingdrugsarefewornotavailable                            = Following drugs are few or not available:
@@ -498,17 +500,17 @@ angal.therapy.patientvisitscouldnotbesaved                                  = Ch
 angal.therapy.patientvisitssaved                                            = Chunguzi za wagonjwa zimehifadhiwa.
 angal.therapy.period                                                        = Kipindi
 angal.therapy.pharmaceutical                                                = Ya Kifamasia
-angal.therapy.pleaseinsertaquantitygreaterthanzero                          = Tafadhali ingiza kiasi ambacho kiwe zaidi ya 0
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                      = Tafadhali ingiza kiasi ambacho kiwe zaidi ya 0.
 angal.therapy.selectapharmaceutical                                         = Chagua bidhaa ya kifamasia
 angal.therapy.settelephonenumber                                            = Weka namba ya simu
 angal.therapy.smsm                                                          = Ujumbe
 angal.therapy.start                                                         = Anzisha
 angal.therapy.startsdashend                                                 = Mwanzo - Mwisho
-angal.therapy.telephonenumberfor                                            = Namba ya simu kwa ajili ya
+angal.therapy.telephonenumberfor.fmt                                        = Namba ya simu kwa ajili ya {0}
 angal.therapy.therapiesplancouldnotbesaved                                  = Utaratibu wa matibabu haujahifadhiwa
 angal.therapy.therapiesplansaved                                            = Utaratibu wa matibabu umehifadhiwa
 angal.therapy.therapy                                                       = Tiba
-angal.therapy.therapyfor                                                    = Tiba kwa ajili ya
+angal.therapy.therapyfor.fmt                                                = Tiba kwa ajili ya {0}
 angal.therapy.theresnotelephonenumberassociatedwiththispatient              = Haina namba ya simu inayohusiana na mgonjwa huu
 angal.therapy.thetherapyhasnotbeencheckedcontinue                           = Tiba haijaangaliwa, unataka kuendelea?
 angal.therapy.thetherapyisnotavailablecontinue                              = Tiba haipatikani, unataka kuendelea?
