Add missing bundle

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -974,6 +974,7 @@ angal.telemetry.confirmation.dialog.message															   = Are you sure that
 angal.telemetry.button.label.confirm																   = Confirm
 angal.telemetry.button.label.ask.later																   = Ask me later 
 angal.telemetry.button.label.ask.never																   = Disable and never ask again 
+angal.menu.telemetry                                                                                   = Telemetry
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
