Add missing bundle

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -966,6 +966,7 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
+angal.menu.telemetry                                                                                   = Telemetry
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
