OP-927 update date and time choosers for SMS Manager and New SMS

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1332,11 +1332,11 @@ angal.sms.deletetheselectedsms.msg                                              
 angal.sms.doyouwanttosplitinmoremessages                                                               = Do you want to split in more messages
 angal.sms.newsms.title                                                                                 = New SMS
 angal.sms.number                                                                                       = Number
+angal.sms.pleaseenteravaliddateandtime.msg                                                             = Please enter a valid date and time.
 angal.sms.pleaseinsertatextmessage.msg                                                                 = Please insert a text message.
 angal.sms.pleaseinsertavalidtelephonenumber.msg                                                        = Please insert a valid telephone number.
 angal.sms.scheduleddate                                                                                = Scheduled Date
 angal.sms.scheduleddate.col                                                                            = Sched. Date
-angal.sms.scheduledtime                                                                                = Scheduled Time
 angal.sms.sent.col                                                                                     = Sent
 angal.sms.smsmanager.title                                                                             = SMS Manager
 angal.sms.themessageislongerthencharacters.fmt.msg                                                     = The message is longer then {0} characters.
