--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1536,6 +1536,7 @@ angal.visit.removevisit.btn                                                     
 angal.visit.removevisit.msg                                                                            = Remove the visit?
 angal.visit.selectaward                                                                                = Select a Ward
 angal.visit.service                                                                                    = Service
+angal.visit.thepatientssexandwarddonotagree.msg                                                        = The patient's sex and ward do not agree.
 angal.visit.today.btn                                                                                  = Today
 angal.visit.today.btn.key                                                                              = T
 angal.visit.visits                                                                                     = Visits
