--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1496,7 +1496,7 @@ angal.userbrowser.edituser.title                                                
 angal.userbrowser.group.label                                                                          = Group:
 angal.userbrowser.name.label                                                                           = Name:
 angal.userbrowser.password.label                                                                       = Password:
-angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
+angal.userbrowser.passwordmustbeatleastncharacters.fmt.msg                                             = Password must be at least {0} characters; please retry.
 angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                                                 = Passwords do not match; please correct.
 angal.userbrowser.passwordsdonotmatchpleaseretry.msg                                                   = Passwords do not match; please retry.
 angal.userbrowser.pleaseprovideapassword.msg                                                           = Please provide a password.
@@ -1507,7 +1507,7 @@ angal.userbrowser.resetpassword.btn.key                                         
 angal.userbrowser.resetpassword.title                                                                  = Reset Password
 angal.userbrowser.retype.password.label                                                                = Retype Password:
 angal.userbrowser.selectgroup.label                                                                    = Select group:
-angal.userbrowser.step1.pleaseinsertanew.password.label                                                = Please insert a new password (minimum of 6 characters).
+angal.userbrowser.step1.pleaseinsertanew.password.fmt.msg                                              = Please insert a new password (minimum of {0} characters).
 angal.userbrowser.step2.pleaserepeatthenewpassword.label                                               = Please repeat the new password.
 angal.userbrowser.theadminusercannotbedeleted.msg                                                      = The "admin" user cannot be deleted.
 angal.userbrowser.thepasswordhasbeenchanged.msg                                                        = The password has been changed.
