OP-902 use STRONGLENGTH and validate password length

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1496,6 +1496,7 @@ angal.userbrowser.edituser.title                                                
 angal.userbrowser.group.label                                                                          = Group:
 angal.userbrowser.name.label                                                                           = Name:
 angal.userbrowser.password.label                                                                       = Password:
+angal.userbrowser.passwordistoolongmaximumof72characters.msg                                           = Password is too long; maximum of 72 characters.
 angal.userbrowser.passwordmustbeatleastncharacters.fmt.msg                                             = Password must be at least {0} characters; please retry.
 angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                                                 = Passwords do not match; please correct.
 angal.userbrowser.passwordsdonotmatchpleaseretry.msg                                                   = Passwords do not match; please retry.
