OP-895 implement password strength test

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1497,6 +1497,7 @@ angal.userbrowser.group.label                                                   
 angal.userbrowser.name.label                                                                           = Name:
 angal.userbrowser.password.label                                                                       = Password:
 angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
+angal.userbrowser.passwordsmustcontainatleastonealphabeticnumericandspecialcharacter.msg               = Password must contain at least one alphabetic, numeric, and special character.
 angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                                                 = Passwords do not match; please correct.
 angal.userbrowser.passwordsdonotmatchpleaseretry.msg                                                   = Passwords do not match; please retry.
 angal.userbrowser.pleaseprovideapassword.msg                                                           = Please provide a password.
