--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -888,6 +888,7 @@ angal.menu.btn.examtype                                                         
 angal.menu.btn.generaldata                                                                             = Settings
 angal.menu.btn.groups                                                                                  = Groups
 angal.menu.btn.help                                                                                    = Help
+angal.menu.btn.logout																				   = Logout
 angal.menu.btn.hospital                                                                                = Hospital
 angal.menu.btn.labbrowsing                                                                             = Laboratory Browsing
 angal.menu.btn.laboratory                                                                              = Laboratory
